chore(clean): updated docs, tests and streamlit
